# RustOS

./: .gitignore  README.md
boot/src/: main.rs
kern/src/: .init.rs.swp  .main.rs.swp  .param.rs.swp  .traps.rs.swp  allocator.rs  console.rs  fs.rs  init.rs  main.rs  mutex.rs  param.rs  shell.rs  traps.rs  vm.rs
kern/src/allocator/: bin.rs  bump.rs  util.rs
kern/src/fs/: sd.rs
kern/src/init/: panic.rs  vectors.s
kern/src/process/: .process.rs.swp  .scheduler.rs.swp  process.rs  scheduler.rs
kern/src/traps/: .irq.rs.swp  .syscall.rs.swp  frame.rs  irq.rs  syndrome.rs  syscall.rs
kern/src/vm/: pagetable.rs
lib/fat32/: Cargo.toml
lib/fat32/src/: mbr.rs
lib/fat32/src/vfat/: cache.rs  cluster.rs  dir.rs  ebpb.rs  entry.rs  fat.rs  file.rs  metadata.rs  vfat.rs
lib/kernel_api/src/: syscall.rs
lib/pi/src/: gpio.rs  interrupt.rs  local_interrupt.rs  timer.rs  uart.rs
lib/pi/src/atags/: atag.rs  mod.rs  raw.rs
lib/stack-vec/src/: lib.rs
lib/ttywrite/: Cargo.toml
lib/ttywrite/src/: main.rs
lib/xmodem/src/: lib.rs
tut/1-blinky/phase4/src/: main.rs
user/: build.sh
user/fib/src/: main.rs
user/shared/: cr0.rs
