[package]
name = "ttywrite"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[dependencies]
structopt = "=0.1.7"
structopt-derive = "=0.1.6"
clap = "=2.33.0"
bitflags = "=1.2.1"
serial = "0.4"
xmodem = { path = "../xmodem/" }
